--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>FDA Tech Lab</title>
-    <link rel="shortcut icon" href="../images/favicon-1024x1024.png">
-    <script src="../javaS/jS2.js"></script>
+    <link rel="shortcut icon" href="fnl-fix/images/favicon-1024x1024.png">
+    <script src="fnl-fix/javaS/jS2.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="../css2/signuo-main.css">
+    <link rel="stylesheet" href="fnl-fix/css2/signuo-main.css">
 </head>
 <body>
 <header>
@@ -20,7 +20,7 @@
     <p class="greeting">Welcome to the Crew!</p>
     <br>
     <div class="contain">
-        <form id="unDo" action="../php2/test.php" onsubmit="return checkSignInfo()" name="enForm" method="post">
+        <form id="unDo" action="fnl-fix/php2/test.php" onsubmit="return checkSignInfo()" name="enForm" method="post">
             <div>
                 <label>First Name</label>
                 <br>
