--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <button type="reset" onclick="clearForm()">Cancel</button>
             <br>
             <br>
-            <a class="button" href="login.html">Back to login.</a>
+            <a class="button" href="fnl-fix/html/login.html">Back to login.</a>
         </form>
     </div>
     <br>
